This this the changelog file for the Pothos C++ library.

Release 0.2.0 (pending)
==========================

- Added JSON Topology feature

Release 0.1.0 (2014-12-21)
==========================

This is the first public release of the Pothos C++ library.