@@ -3,7 +3,8 @@ This this the changelog file for the Pothos C++ library.
 Release 0.2.0 (pending)
 ==========================
 
-- Added JSON Topology feature
+- Topology factory from JSON description
+- Topology supports pass-through flows
 
 Release 0.1.0 (2014-12-21)
 ==========================
